--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,7 +13,7 @@ dependencies:
     sdk: flutter
 
   cupertino_icons: ^0.1.3
-  english_words: ^3.1.5
+  carousel_slider: ^2.2.1
 
 dev_dependencies:
   flutter_test:
@@ -81,8 +81,12 @@ flutter:
     - images/cars/c39.jpg
     - images/cars/vf20.jpg
     - images/cars/fw43.jpg
-
-
-
+    - images/anaresim.jpg
+    - images/teams.jpg
+    - images/news.jpeg
+    - images/anadriver.jpg
+    - images/takimlar.jpeg
+    - images/spain.gif
+    - images/ispanya.jpg
 
 
