+ Added 'Drivers' page + Added 'Teams' page + Both pages can be accessed from the carousel on the main screen + Fixed the issue that was caused by icon at the top left corner + Added 'Next Race' container which looks ugly af.
I don't know what more i want to add from here. I think i am pretty much done and will move to different projects....i guess...

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -88,5 +88,26 @@ flutter:
     - images/takimlar.jpeg
     - images/spain.gif
     - images/ispanya.jpg
+    - images/cards/lewis.jpg
+    - images/cards/valtteri.jpg
+    - images/cards/alex.jpg
+    - images/cards/max.jpg
+    - images/cards/antonio.jpg
+    - images/cards/carlos.jpg
+    - images/cards/charles.jpg
+    - images/cards/daniel.jpg
+    - images/cards/daniil.jpg
+    - images/cards/esteban.jpg
+    - images/cards/george.jpg
+    - images/cards/kevin.jpg
+    - images/cards/kimi.jpg
+    - images/cards/lance.jpg
+    - images/cards/lando.jpg
+    - images/cards/nicholas.jpg
+    - images/cards/pierre.jpg
+    - images/cards/romain.jpg
+    - images/cards/sebastian.jpg
+    - images/cards/sergio.jpg
+    - images/races/ispanya.PNG
 
 
